force-app/main/default/objects/Opportunity/fields/AccountingResponsibleRef__c.field-meta.xml
<CustomField>
    <fullName>AccountingResponsibleRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User from Finance who is reviewing the finance related information entered on the Opportunity.</description>
    <inlineHelpText>User from Finance who is reviewing the finance related information entered on the Opportunity.</inlineHelpText>
    <label>Accounting Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesAccounting</relationshipName>
    <type>Lookup</type>
</CustomField>