force-app/main/default/objects/Opportunity/fields/AdditionalTextPrintedOnInvoice__c.field-meta.xml
<CustomField>
    <fullName>AdditionalTextPrintedOnInvoice__c</fullName>
    <inlineHelpText>Text in this text field is printed on the invoice PDF.</inlineHelpText>
    <label>Additional Text Printed On Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>