force-app/main/default/objects/Opportunity/fields/AmountofCRsAuto__c.field-meta.xml
<CustomField>
    <fullName>AmountofCRsAuto__c</fullName>
    <formula>IF(OriginalOpportunityValuebeforeCR__c = 0,0,Amount - OriginalOpportunityValuebeforeCR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of CRs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>