force-app/main/default/objects/Opportunity/fields/AnyRedFlags__c.field-meta.xml
<CustomField>
    <fullName>AnyRedFlags__c</fullName>
    <label>Any red flags?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>