force-app/main/default/objects/Opportunity/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <inlineHelpText>Ultimate decision maker - what is the process</inlineHelpText>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>