force-app/main/default/objects/Opportunity/fields/ByWhenAndWhy__c.field-meta.xml
<CustomField>
    <fullName>ByWhenAndWhy__c</fullName>
    <description>Presales</description>
    <label>By when and why?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>