force-app/main/default/objects/Opportunity/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <referenceTo>Change_Request__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>