force-app/main/default/objects/Opportunity/fields/CircleRef__c.field-meta.xml
<CustomField>
    <fullName>CircleRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Circle__c.IsOperationsSquad__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Circle__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>