force-app/main/default/objects/Opportunity/fields/Client_Qualification_Description__c.field-meta.xml
<CustomField>
    <fullName>Client_Qualification_Description__c</fullName>
    <label>Client Qualification Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>