force-app/main/default/objects/Opportunity/fields/CloseDateQuarterAuto__c.field-meta.xml
<CustomField>
    <fullName>CloseDateQuarterAuto__c</fullName>
    <formula>"Q"+ TEXT(CEILING(MONTH( CloseDate ) / 3 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date (Quarter)</label>
    <type>Text</type>
</CustomField>