force-app/main/default/objects/Opportunity/fields/CloseDateYearAuto__c.field-meta.xml
<CustomField>
    <fullName>CloseDateYearAuto__c</fullName>
    <formula>"FY"+ TEXT(CEILING(YEAR( CloseDate ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date (Year)</label>
    <type>Text</type>
</CustomField>