force-app/main/default/objects/Opportunity/fields/CommissionAuto__c.field-meta.xml
<CustomField>
    <fullName>CommissionAuto__c</fullName>
    <description>Used in a commission reports to show which amount to pay out (based on how much payment has been received in the last quarter).</description>
    <formula>IF( ISPICKVAL(Type, "New Business"),   ReceivedAmountLastQuarterTrig__c * CommissionV02Auto__c, ReceivedAmountLastQuarterTrig__c* CommissionV02Auto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not on Page Layout, do not delete.</inlineHelpText>
    <label>Commission Amount for Last Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>