force-app/main/default/objects/Opportunity/fields/CommissionV02Auto__c.field-meta.xml
<CustomField>
    <fullName>CommissionV02Auto__c</fullName>
    <description>Only used for Jamie as he has old contract - used in Report "2022 Commission Model Report LastQ_Jamie"</description>
    <formula>IF(  CommissionV02ExistingVsNewBusinessAuto__c = "New Business",  0.05, 0.03)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission V02</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>