force-app/main/default/objects/Opportunity/fields/CommissionV02ExistingVsNewBusinessAuto__c.field-meta.xml
<CustomField>
    <fullName>CommissionV02ExistingVsNewBusinessAuto__c</fullName>
    <formula>IF(

 Account.Customer_Won_Date__c &gt; 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),1,1) &amp;&amp; TODAY() &lt;= DATE(YEAR(TODAY()),3,31),DATE(YEAR(TODAY())-1,10,1), 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),4,1) &amp;&amp; TODAY() &lt;= DATE(YEAR(TODAY()),6,30),DATE(YEAR(TODAY()),1,1), 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),7,1) &amp;&amp; TODAY() &lt;= DATE(YEAR(TODAY()),9,30),DATE(YEAR(TODAY()),4,1), 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),10,1) &amp;&amp; TODAY()&lt;= DATE(YEAR(TODAY()),12,31),DATE(YEAR(TODAY()),7,1),null))))
&amp;&amp;
 Account.Customer_Won_Date__c &lt; 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),1,1) &amp;&amp; TODAY() &lt;= DATE(YEAR(TODAY()),3,31),DATE(YEAR(TODAY())-1,12,31), 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),4,1) &amp;&amp; TODAY() &lt;= DATE(YEAR(TODAY()),6,30),DATE(YEAR(TODAY()),3,31), 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),7,1) &amp;&amp; TODAY() &lt;= DATE(YEAR(TODAY()),9,30),DATE(YEAR(TODAY()),6,30), 
IF(TODAY() &gt;= DATE(YEAR(TODAY()),10,1) &amp;&amp; TODAY()&lt;= DATE(YEAR(TODAY()),12,31),DATE(YEAR(TODAY()),9,30),null))))

, "New Business", "Existing Business")</formula>
    <label>Commission V02 Existing vs New Business</label>
    <type>Text</type>
</CustomField>