force-app/main/default/objects/Opportunity/fields/CompetitorName__c.field-meta.xml
<CustomField>
    <fullName>CompetitorName__c</fullName>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LostReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aborda</fullName>
            </value>
            <value>
                <fullName>Accenture</fullName>
            </value>
            <value>
                <fullName>Axpe Consulting</fullName>
            </value>
            <value>
                <fullName>Capgemini</fullName>
            </value>
            <value>
                <fullName>cDecisions</fullName>
            </value>
            <value>
                <fullName>Ceterna</fullName>
            </value>
            <value>
                <fullName>Cloudity</fullName>
            </value>
            <value>
                <fullName>CloudShift</fullName>
            </value>
            <value>
                <fullName>Cloudsocius</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>Die-interaktiven</fullName>
            </value>
            <value>
                <fullName>Factory 42</fullName>
            </value>
            <value>
                <fullName>Indra - Insight</fullName>
            </value>
            <value>
                <fullName>Kantox</fullName>
            </value>
            <value>
                <fullName>LeadClic</fullName>
            </value>
            <value>
                <fullName>Pracedo</fullName>
            </value>
            <value>
                <fullName>S4G</fullName>
            </value>
            <value>
                <fullName>TicMind</fullName>
            </value>
            <value>
                <fullName>Vass</fullName>
            </value>
            <value>
                <fullName>Xenogenix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>