force-app/main/default/objects/Opportunity/fields/CostOfDelivery__c.field-meta.xml
<CustomField>
    <fullName>CostOfDelivery__c</fullName>
    <description>Is filled by a process builder that looks at the entity and takes the average Cost per Consulatant hour and multiplies it with the Hourls Rate</description>
    <label>Cost of Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>