force-app/main/default/objects/Opportunity/fields/CountMilestonesAuto__c.field-meta.xml
<CustomField>
    <fullName>CountMilestonesAuto__c</fullName>
    <description>Needed for Validation Rule - Opportunity can only be closed won if Milestones are attached.</description>
    <inlineHelpText>Field that shows the Amount of Milestones attached to the Opportunity.</inlineHelpText>
    <label>Count Milestones</label>
    <summaryForeignKey>Milestone__c.OpportunityRef__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>