force-app/main/default/objects/Opportunity/fields/CountOpportunityProductsAuto__c.field-meta.xml
<CustomField>
    <fullName>CountOpportunityProductsAuto__c</fullName>
    <description>Needed for Validation Rules.</description>
    <inlineHelpText>Need to have a least one Opportunity Product to Close an Opportunity as Won.</inlineHelpText>
    <label>Count Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>