force-app/main/default/objects/Opportunity/fields/CustomerCREstimateApprover__c.field-meta.xml
<CustomField>
    <fullName>CustomerCREstimateApprover__c</fullName>
    <description>Approver of Change Requests (Project) or Estimates (Managed Service) as indicated by the customer in the SoW Signing Process. Populated from Docusign.</description>
    <inlineHelpText>Approver of Change Requests (Project) or Estimates (Managed Service) as indicated by the customer in the SoW Signing Process. Populated from Docusign.</inlineHelpText>
    <label>Customer CR / Estimate Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>