force-app/main/default/objects/Opportunity/fields/CustomerCREstimateApproverEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerCREstimateApproverEmail__c</fullName>
    <description>Email Address of Customer CR / Estimate Approver. Populated from Docusign.</description>
    <inlineHelpText>Email Address of Customer CR / Estimate Approver. Populated from Docusign.</inlineHelpText>
    <label>Customer CR / Estimate Approver Email</label>
    <type>Email</type>
</CustomField>