force-app/main/default/objects/Opportunity/fields/CustomerSignerSoWIDAuto__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignerSoWIDAuto__c</fullName>
    <description>Technical field for Conga Composer.</description>
    <formula>CustomerSignerSoWRef__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Signer SoW ID</label>
    <type>Text</type>
</CustomField>