force-app/main/default/objects/Opportunity/fields/CustomerSignerSoWRef__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignerSoWRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required for sending an SoW - should be the authorized signer of an SoW.</description>
    <inlineHelpText>Required for sending an SoW - should be the authorized signer of an SoW.</inlineHelpText>
    <label>Customer Signer SoW</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The Conntact needs to belong to the same Account as the Opportunity</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contract Signer for</relationshipLabel>
    <relationshipName>ContractSignerfor</relationshipName>
    <type>Lookup</type>
</CustomField>