force-app/main/default/objects/Opportunity/fields/DatamodelURL__c.field-meta.xml
<CustomField>
    <fullName>DatamodelURL__c</fullName>
    <inlineHelpText>Paste the URL for the Datamodel in here.</inlineHelpText>
    <label>Datamodel URL</label>
    <type>Url</type>
</CustomField>