force-app/main/default/objects/Opportunity/fields/DeliveredPresalesHrs__c.field-meta.xml
<CustomField>
    <fullName>DeliveredPresalesHrs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the Hours delivered in the Presales process</description>
    <label>Delivered Presales (hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>