force-app/main/default/objects/Opportunity/fields/DeliveringEntityRef__c.field-meta.xml
<CustomField>
    <fullName>DeliveringEntityRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set by PB02_CalculateCostOfDelivery. Will always put the Entity of the Account. Manual overwrite not possible.</description>
    <inlineHelpText>EMPAUA Entity that is providing the SoW to the Customer.</inlineHelpText>
    <label>Delivering Entity</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>