force-app/main/default/objects/Opportunity/fields/DiscountAmountifProjectiswon__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmountifProjectiswon__c</fullName>
    <inlineHelpText>Please enter a negative value, e.g. -1'000EUR.</inlineHelpText>
    <label>Discount Amount if Project is won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>