force-app/main/default/objects/Opportunity/fields/DiscountPercentageifProjectiswon__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentageifProjectiswon__c</fullName>
    <label>Discount % if Project is won</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>