force-app/main/default/objects/Opportunity/fields/Ease_of_handing_the_client_over__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_handing_the_client_over__c</fullName>
    <inlineHelpText>Ease of handing the client over/Client Project Management Gauge
Low - any PM could take them on
Medium - Any senior PM can be resourced
High - only a SPECIFIC senior PM can be resourced for this client</inlineHelpText>
    <label>Ease of handing the client over</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>