force-app/main/default/objects/Opportunity/fields/EMPAUAPreparerSoW__c.field-meta.xml
<CustomField>
    <fullName>EMPAUAPreparerSoW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for the SoW preparer (user) that is referenced on the SoW. Used in Conga.</description>
    <inlineHelpText>Field for the SoW preparer (user) that is referenced on the SoW. Used in Conga.</inlineHelpText>
    <label>EMPAUA Preparer SoW</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>