force-app/main/default/objects/Opportunity/fields/EMPAUASignerSoWIDAuto__c.field-meta.xml
<CustomField>
    <fullName>EMPAUASignerSoWIDAuto__c</fullName>
    <description>Technical field for Conga Composer.</description>
    <formula>EMPAUASignerSoWRef__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMPAUA Signer SoW ID</label>
    <type>Text</type>
</CustomField>