force-app/main/default/objects/Opportunity/fields/EMPAUASignerSoWRef__c.field-meta.xml
<CustomField>
    <fullName>EMPAUASignerSoWRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field defines the default EMPAUA user that signs Docusign contracts sent out from this Opportunity. Filled by Process Builder. ID of this lookup is referenced here: DeliveringEntityContractSignerAuto__c</description>
    <inlineHelpText>This field defines the default EMPAUA user that signs Docusign contracts sent out from this Opportunity.</inlineHelpText>
    <label>EMPAUA Signer SoW</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>