force-app/main/default/objects/Opportunity/fields/EMPAUAValidatorSoWRef__c.field-meta.xml
<CustomField>
    <fullName>EMPAUAValidatorSoWRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for the SoW Validator user that is referenced on the SoW. Used in Conga.</description>
    <inlineHelpText>Field for the SoW Validator user that is referenced on the SoW. Used in Conga.</inlineHelpText>
    <label>EMPAUA Validator SoW</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>