force-app/main/default/objects/Opportunity/fields/Engagement_Approved__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically checked or unchecked based on the status of a related engagement.</description>
    <label>Engagement Approved</label>
    <type>Checkbox</type>
</CustomField>