force-app/main/default/objects/Opportunity/fields/EstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAmount__c</fullName>
    <description>For DACH Pipeline, please approach Flo for further questions</description>
    <inlineHelpText>For DACH Pipeline, please approach Flo for further questions</inlineHelpText>
    <label>Estimated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>