force-app/main/default/objects/Opportunity/fields/ExpirationDateOfHours__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDateOfHours__c</fullName>
    <inlineHelpText>Expiration Date of hours for Service Block and for Times and Materials.</inlineHelpText>
    <label>Expiration Date of Hours</label>
    <type>Date</type>
</CustomField>