force-app/main/default/objects/Opportunity/fields/GoogleDriveFolder__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolder__c</fullName>
    <description>URL to the Google Drive Folder in the Commerce Customer Folder.</description>
    <inlineHelpText>Store the contracts and SoWs here.</inlineHelpText>
    <label>Google Drive Folder</label>
    <type>Url</type>
</CustomField>