force-app/main/default/objects/Opportunity/fields/HourlyRate__c.field-meta.xml
<CustomField>
    <fullName>HourlyRate__c</fullName>
    <description>Hourly work rate for this opportunity</description>
    <inlineHelpText>Enter the hourly work rate for the project.</inlineHelpText>
    <label>Hourly Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>