force-app/main/default/objects/Opportunity/fields/HoursPerMonthAuto__c.field-meta.xml
<CustomField>
    <fullName>HoursPerMonthAuto__c</fullName>
    <formula>PlannedHours__c /   ProjectDurationMonthAuto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Planned hours per month in a maintenance contract.</inlineHelpText>
    <label>Hours Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>