force-app/main/default/objects/Opportunity/fields/Important_Information__c.field-meta.xml
<CustomField>
    <fullName>Important_Information__c</fullName>
    <description>Any relevant information regarding the client's agreement with us (ie: any notes about rolling over hrs, or if there is a strict end date etc.,)</description>
    <inlineHelpText>Any relevant information regarding the client's agreement with us (ie: any notes about rolling over hrs, or if there is a strict end date etc.,). Will be mapped to Project and Maintenance TR Project RTs.</inlineHelpText>
    <label>Important Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>