force-app/main/default/objects/Opportunity/fields/IncludeYoYGrowthAuto__c.field-meta.xml
<CustomField>
    <fullName>IncludeYoYGrowthAuto__c</fullName>
    <formula>IF( 
YEAR(CloseDate) = YEAR(TODAY()) ||
( YEAR(CloseDate)=YEAR(TODAY()-365) &amp;&amp; 
CloseDate &lt;= TODAY()-365) ,
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include YoY Growth</label>
    <type>Checkbox</type>
</CustomField>