force-app/main/default/objects/Opportunity/fields/InvoiceContactEmailTrig__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContactEmailTrig__c</fullName>
    <inlineHelpText>Email address of the linked invoice contact.</inlineHelpText>
    <label>Invoice Contact Email</label>
    <type>Email</type>
</CustomField>