force-app/main/default/objects/Opportunity/fields/InvoiceContactRef__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary recipient of opportunity / project related invoices. Used by Finance.</description>
    <inlineHelpText>Primary recipient of opportunity / project related invoices. Used by Finance.</inlineHelpText>
    <label>Invoice Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The invoice contact must belong to the Opportunity Account.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Invoice Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>