force-app/main/default/objects/Opportunity/fields/InvoicingAtPick__c.field-meta.xml
<CustomField>
    <fullName>InvoicingAtPick__c</fullName>
    <description>Will define in MILESTONES_APEX how the invoices will be inserted reg. Invoice Date. User enters value on LWC INSERT_MILESTONES_LWC for ProjectType__c = 'Time &amp; Materials', 'Managed Services' or 'Maintenance'. 
Start of Project = Milestone Date is ProjectStartDateTrig__c - 10. 
Beginning of Month = Milestones Dates are the 2. of each month
Mid-Month = Milestones Dates are on the 16th of each month.</description>
    <inlineHelpText>Please select when the invoicing should happen. Must be filled for project type "Time &amp; Materials", "Managed Services" and "Maintenance". "Beginning of Month" means the previous month (service period) will be invoiced at the start of the following month.</inlineHelpText>
    <label>Invoicing At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start of Project (Kick-Off)</fullName>
            </value>
            <value>
                <fullName>Beginning of Month</fullName>
            </value>
            <value>
                <fullName>Mid-Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>