force-app/main/default/objects/Opportunity/fields/Is100Upfront__c.field-meta.xml
<CustomField>
    <fullName>Is100Upfront__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE the Opp has been 100% upfront.</description>
    <inlineHelpText>Used for Automation reg. Chatter post on Time Entry if there is no Open Billing Mapping on the Project. The ones that have 100% Upfront = TRUE are excluded (13.10.2022 -&gt; TPB01_TimeEntry)</inlineHelpText>
    <label>Is 100% Upfront?</label>
    <type>Checkbox</type>
</CustomField>