force-app/main/default/objects/Opportunity/fields/IsAccountingApproved__c.field-meta.xml
<CustomField>
    <fullName>IsAccountingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accounting Approved</label>
    <type>Checkbox</type>
</CustomField>