force-app/main/default/objects/Opportunity/fields/IsAccountOnboardingReturned__c.field-meta.xml
<CustomField>
    <fullName>IsAccountOnboardingReturned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox set when Customer submitted the Account Onboarding form</inlineHelpText>
    <label>Is Account Onboarding Returned</label>
    <type>Checkbox</type>
</CustomField>