force-app/main/default/objects/Opportunity/fields/IsAdjustedByChangeRequest__c.field-meta.xml
<CustomField>
    <fullName>IsAdjustedByChangeRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in OpportunityLineItemHelper to recalculate Planned Hours</description>
    <label>Adjusted By Change Request</label>
    <type>Checkbox</type>
</CustomField>