force-app/main/default/objects/Opportunity/fields/IsStandardNaming__c.field-meta.xml
<CustomField>
    <fullName>IsStandardNaming__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If TRUE, the opportunity name is updated to standard naming conventions.</inlineHelpText>
    <label>Standard Naming</label>
    <type>Checkbox</type>
</CustomField>