force-app/main/default/objects/Opportunity/fields/IsUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>