force-app/main/default/objects/Opportunity/fields/LastStageChange__c.field-meta.xml
<CustomField>
    <fullName>LastStageChange__c</fullName>
    <inlineHelpText>When was the Last Stage Change. This field will be filled by creation and updated for every stage change.</inlineHelpText>
    <label>Last Stage Change</label>
    <type>DateTime</type>
</CustomField>