force-app/main/default/objects/Opportunity/fields/LeadCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LeadCreatedDate__c</fullName>
    <description>This field is mapped from Lead in conversion to track Lead To Opportunity age.</description>
    <label>Lead Created Date</label>
    <type>Date</type>
</CustomField>