force-app/main/default/objects/Opportunity/fields/LeadOpportunityAgeAuto__c.field-meta.xml
<CustomField>
    <fullName>LeadOpportunityAgeAuto__c</fullName>
    <formula>IF(IsClosed, CloseDate  -  LeadCreatedDate__c ,  TODAY() - LeadCreatedDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>