force-app/main/default/objects/Opportunity/fields/LeadSourceAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceAdditionalInfo__c</fullName>
    <description>A shorthand description, detailing the specific source of the Lead (i.e. Dreamforce 2014 Leads, 'Contact Us' Web Form, etc.).</description>
    <label>Lead Source Additional Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>