force-app/main/default/objects/Opportunity/fields/Lost_to_Competitor_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor_Reason__c</fullName>
    <label>Lost-to-Competitor Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LostReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Specific Expertise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>