force-app/main/default/objects/Opportunity/fields/LostReason__c.field-meta.xml
<CustomField>
    <fullName>LostReason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Poor Qualification</fullName>
            </value>
            <value>
                <fullName>No Authority</fullName>
            </value>
            <value>
                <fullName>No Need</fullName>
            </value>
            <value>
                <fullName>No Urgency</fullName>
            </value>
            <value>
                <fullName>No Money/Price</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Missing Feature</fullName>
            </value>
            <value>
                <fullName>Lost Momentum</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Salesforce Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>