force-app/main/default/objects/Opportunity/fields/MonthlyAllowance__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAllowance__c</fullName>
    <description>MILESTONES_APEX will inserts Milestones with Monthly Allowance as Invoice Line Item Quantity, for Ongoing projects with ProjectType__c = 'Managed Service", ProjectEndDateTrig__c in the future and no open Invoice connected for the period.</description>
    <inlineHelpText>Please enter the monthly allowance that the customer can use for Managed Service. Will be the quantity of each Invoice that will be created.</inlineHelpText>
    <label>Monthly Allowance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>