force-app/main/default/objects/Opportunity/fields/MonthlyPriceAuto__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPriceAuto__c</fullName>
    <description>Calculates Hourly Rate * Monthly Allowance for Managed Service.</description>
    <formula>IF( !ISNULL(MonthlyAllowance__c) &amp;&amp; !ISNULL(HourlyRate__c),
MonthlyAllowance__c * HourlyRate__c,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates Hourly Rate * Monthly Allowance for Managed Service.</inlineHelpText>
    <label>Monthly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>